user interface build

--- a/public/index.html
+++ b/public/index.html
@@ -10,10 +10,7 @@
     <title>Weather App - Etteplan</title>
     <link rel="stylesheet"
       type="text/css"
-      href="styles/fonts.css" />
-    <link rel="stylesheet"
-      type="text/css"
-      href="styles/normalize.css" />
+      href="./normalize.css" />
   </head>
 
   <body>
